change color and add forms login

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,11 @@
     body{
         /* background-color: rgb(64, 99, 64); */
 
-        background-color: #99e699;
+        /* background-color: #99e699; */
+
+        background-image: url(./assets/img/im1.jpg);
+        background-attachment: fixed;
+
 
     }
 
@@ -37,7 +41,8 @@
 
 
 </head>
-<body>
+<!-- near-moon-gradient  -->
+<body class="">
   <app-root></app-root>
 
 
@@ -58,5 +63,5 @@
         <!-- MDB core JavaScript -->
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.12.0/js/mdb.min.js"></script>
 
-</body>
+</body cl>
 </html>
