profile.ts changed

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,14 @@
 <!-- Material Design Bootstrap -->
 <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.11.0/css/mdb.min.css" rel="stylesheet">
 
+<style>
+  body{
+      background-image: url(./assets/img/im1.jpg);
+      background-attachment: fixed;
+      padding-top: 66px;
+  }
 
+</style>
 </head>
 <body>
   <app-root></app-root>
