--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   body{
       background-image: url(./assets/img/im1.jpg);
       background-attachment: fixed;
-      padding-top: 66px;
+      /* padding-top: 66px; */
   }
 
 </style>
